[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scripts/Projetil_tronco.gd" type="Script" id=1]
[ext_resource path="res://Assets/Animated Objects/Traps/Wood.png" type="Texture" id=2]
[ext_resource path="res://Assets/Animated Objects/Traps/Tronco.png" type="Texture" id=3]
[ext_resource path="res://Assets/Efeitos_sonoros/Outros/rupture-tree-branch-impact-.wav" type="AudioStream" id=4]
[ext_resource path="res://Assets/Efeitos_sonoros/Outros/large-tree-fall.wav" type="AudioStream" id=5]
[ext_resource path="res://Assets/Efeitos_sonoros/Outros/tree_dropped.wav" type="AudioStream" id=6]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 46, 9.49999 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 55, 19 )

[node name="Projetil_tronco_horizontal" type="KinematicBody2D"]
position = Vector2( 69, -18 )
rotation = -6.28319
scale = Vector2( 1.5, 1.5 )
collision_mask = 9
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
modulate = Color( 0, 0, 0, 1 )
position = Vector2( -46, -0.500002 )
shape = SubResource( 2 )

[node name="Node2D" type="Node2D" parent="."]
position = Vector2( -43, -36.5 )

[node name="Sprite" type="Sprite" parent="Node2D"]
position = Vector2( 26.503, 37.5 )
rotation = 4.71239
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 3 )

[node name="Sprite2" type="Sprite" parent="Node2D"]
position = Vector2( 0, 36 )
rotation = 1.5708
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 3 )

[node name="Sprite3" type="Sprite" parent="Node2D"]
position = Vector2( -30, 36 )
rotation = 1.5708
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 3 )

[node name="Sprite4" type="Sprite" parent="Node2D"]
position = Vector2( -44, 36.5 )
scale = Vector2( 1, 1.85 )
texture = ExtResource( 2 )

[node name="Sprite5" type="Sprite" parent="Node2D"]
position = Vector2( 41, 36.5 )
scale = Vector2( 1, 1.85 )
texture = ExtResource( 2 )

[node name="Detector" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detector"]
position = Vector2( -45, -1 )
shape = SubResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
visible = false
position = Vector2( -55.674, 3.37324 )
scale = Vector2( 5.46456, 3.2422 )

[node name="Som_1" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
volume_db = 10.0

[node name="Som_2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )

[node name="Som_3" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )

[connection signal="area_entered" from="Detector" to="." method="_on_Detector_area_entered"]
[connection signal="body_entered" from="Detector" to="." method="_on_Detector_body_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
